--- a/Uphysicsc.tex
+++ b/Uphysicsc.tex
@@ -200,13 +200,13 @@ Obviously, the time flight will decrease as the mass of the solar sail becomes b
 \begin{figure}[h]
 	\centering
 	\includegraphics[scale=0.35]{time}
-	\caption{\small Decrease of the flight time  }
+	\caption{\small Decrease of the flight time as a function of the solar sail mass}
 	\label{fig:time}
 \end{figure}
 
-Firstly, it must be stated that with a maximum payload of $2000kg$ one cannot safely send a manned space craft. Therefore, we will consider a mission consisting on sending just material.
+Firstly, it must be stated that with a maximum payload of $2000$kg one cannot safely send a manned space craft. Therefore, we will consider a mission consisting on sending just material.
 
-One must now decide on a formula which will have both a reasonable time of travel and a sufficient amount of payload so that the mission is profitable. Researching past missions to Mars, time travels of about one year are reasonable and, to have an idea, a rover like Curiosity weights about $900kg$. Of course, extra material is needed, but, according to research, $1000kg$ of payload seems a reasonable choice. From equation 3.2 it is found that the flight time will be around 390 days, which, as stated, seems feasible.
+One must now decide on a formula which will have both a reasonable time of travel and a sufficient amount of payload so that the mission is profitable. Researching past missions to Mars, time travels of about one year are reasonable and, to have an idea, a rover like Curiosity weights about $900$kg. Of course, extra material is needed, but, according to research, $1000$kg of payload seems a reasonable choice. From equation 3.2 it is found that the flight time will be around 390 days, which, as stated, seems feasible.
 
 Choosing to distribute equally the mass of the sail and the mass of the sail, one gets a value for the solar sail lightness of $\beta=0.1088$. From now on, this value will be assumed to be equal to 0.1, since most of the other characteristics can be found in literature for such value.
 
