--- a/Uphysicsc.tex
+++ b/Uphysicsc.tex
@@ -200,7 +200,7 @@ Obviously, the time flight will decrease as the mass of the solar sail becomes b
 \begin{figure}[h]
 	\centering
 	\includegraphics[scale=0.35]{time}
-	\caption{\small Decrease of the flight time as a function of the solar sail mass}
+	\caption{\small Decrease of the flight time as a function of thet  solar sail mass}
 	\label{fig:time}
 \end{figure}
 
@@ -214,7 +214,7 @@ Choosing to distribute equally the mass of the sail and the mass of the sail, on
 \subsection{First simulation?}
 Solutions of equations \ref{carlessexy} and \ref{carlessexy2} have been simulated. Figure ?? shows the trajectory followed by the sail. It is direct that it is still a spiral, but not a logaritmic one as in Figure \ref{espiral}. Note that the trajectory of the sail is not tangent anymore to the orbit of Mars.
 
-The simulation also allows us to find a first approximation of the velocity with which the sail reaches Mars. Without considering the gravitational pull exerted by Mars, and approximating both curves to tangent, the relative velocity between both bodies is $-4km/s$, meaning Mars, which is behind the sail, reaches the spacecraft at a speed of $4km/s$.
+The simulation also allows us to find a first approximation of the velocity with which the sail reaches Mars. Without considering the gravitational pull exerted by Mars, and approximating both curves to tangent, the relative velocity between both bodies is $-4km/s$, meaning Mars, which is behind the sail, reaches the spacecraft at a speed of $4$km/s.
 
 
 \bibliographystyle{ieeetr}
