--- a/UphysicscNotes.bib
+++ b/UphysicscNotes.bib
@@ -15,3 +15,10 @@
 	year = "2004",
 	publisher = "Springer-Verlag"
 }
+
+@techreport{hollerman,
+	author = "William A. Hollerman",
+	title = "The Physics of Solar Sails",
+	year = "2003",
+	institution = "Lousiana University"
+}
