--- a/Uphysicsc.tex
+++ b/Uphysicsc.tex
@@ -123,7 +123,7 @@ With this in mind we can then rewrite \autoref{eq:equations of motion perpendicu
 As we have already mentioned, this shows that the motion of a solar sail receiving radiation orthogonal to itself is governed by an inverse square law. In particular, the sail will move as if it were orbiting a star with a mass less than the Sun.
 
 \subsection{Equations of motion for a solar sail: general case}
-This, however, is only true if the sail is orthogonal to the incoming radiation. Indeed, if we allow for the sail to be at an arbitrary orientation, then its tangential acceleration is no longer zero. For this, we introduce the angle \( \alpha \), which is the angle between the vector normal to the sail, \( \hat{\mathbf{n}} \), and the radial direction. Now, the force due to radiation pressure has two contributions. The incoming photons exert a force that is now proportional to the orthogonal projection of the sail onto the radial direction, therefore of \( IS\cos{\alpha}/c \). This force is in the radial direction. The emitted photons exert a force that has the same modulus, but given that the sail behaves like a mirror, they are emmited in the direction orthogonal to the radial direction, and so the force due to the outgoing radiation is proportional to \( {-\hat{\mathbf{e}}_{\theta}} \). So we have
+This, however, is only true if the sail is orthogonal to the incoming radiation. Indeed, if we allow for the sail to be at an arbitrary orientation, then its tangential acceleration is no longer zero. For this, we introduce the angle \( \alpha \), which is the angle between the vector normal to the sail, \( \hat{\mathbf{n}} \), and the radial direction. We do not allow for full freedom of the sail, and assume that its normal vector remains in the plane that contains the radial vector and is orthogonal to the sail itself. Now, the force due to radiation pressure has two contributions. The incoming photons exert a force that is now proportional to the orthogonal projection of the sail onto the radial direction, therefore of \( IS\cos{\alpha}/c \). This force is in the radial direction. The emitted photons exert a force that has the same modulus, but given that the sail behaves like a mirror, they are emmited in the direction orthogonal to the radial direction, and so the force due to the outgoing radiation is proportional to \( {-\hat{\mathbf{e}}_{\theta}} \). So we have
 \begin{equation}
   \mathbf{F}_R(r) = \dfrac{2IS \cos{\alpha}}{c} ( \hat{\mathbf{e}}_{r} - \hat{\mathbf{e}}_{\theta})
 \end{equation}
@@ -139,15 +139,24 @@ Finally, we can rewrite the equations of motion for a solar sail in this more ge
   \dot{v}_r - \dfrac{v_{\theta}^2}{r} &= (a_R \cos^3{\alpha} - a_G) \left(\dfrac{r_0}{r}\right)^2 \\ 
   \dot{v}_{\theta} + \dfrac{v_r v_{\theta}}{r} &= -a_R	\sin{\alpha} \cos^2{\alpha} \left(\dfrac{r_0}{r}\right)^2
 \end{align}
-As a consistency check,  we note that if \( \alpha = 0 \), that is, the sail is orthogonal to the radiation, we recover \autoref{eq:equations of motion characteristic accelerations}. However, the equations we have just obtained are \emph{not} the equations for a particle experiencing central force motion.   
+As a consistency check, we note that if \( \alpha = 0 \), that is, the sail is orthogonal to the radiation, we recover \autoref{eq:equations of motion characteristic accelerations}. However, the equations we have just obtained are \emph{not} the equations for a particle experiencing central force motion.   
 
-\section{First Results}
+\section{First model}
 \subsection{Feasibility of the trip}
-To solve \autoref{eq:equations of motion general case} it is common to assume \( \dot{v}_r = 0\), as done in \cite{tsu} and \cite{mcinnes}. Then, the equations become those of a logarithmic spiral. Then, \( v_r = \dot{r} \) can be isolated and then integrated to find an expresssion for the time of travel between two orbits of a given radius in terms of only the parameters \( \alpha \), \( a_R \) and \( a_G \):
+To solve \autoref{eq:equations of motion general case} it is common to assume \( \dot{v}_r = 0\), as done in \cite{tsu} and \cite{mcinnes}. Then, the equations become those of a logarithmic spiral. Then, \( v_r = \dot{r} \) can be isolated and then integrated to find an expresssion for the time of travel between two circular and coplanar orbits of a given radius in terms of only the parameters \( \alpha \), \( a_R \) and \( a_G \):
 
 \begin{equation} \label{eq:time of flight between orbits}
 	t=\frac{1}{3}\cdot\frac{r_0^{3/2}-r^{3/2}}{r_0\sqrt{a_R}}\cdot\frac{(a_G/a_R-\cos^3\alpha)^{1/2}}{\sin\alpha\cos^2\alpha}
 \end{equation}
+Therefore, assuming that the orbits of Mars and the Earth are indeed coplanar, we can compute the time it would take for a solar sail to complete the trip from Earth to Mars, for a given choice of parameters. 
+
+Given the data in the problem then \( a_G \) is completely determined and has a value of \SI{5,928e-3}{m \cdot s^{-2}}. The characteristic acceleration can be rewritten in terms of the mass of the sail, \( m_s \):
+\begin{align*}
+  a_R &= \dfrac{2I_0}{c} \dfrac{S}{m} \\
+  		&= \dfrac{2I_0}{c} \dfrac{m_s}{\sigma m}
+\end{align*}
+where \( \sigma \) is the surface density of the sail, as given in the problem. And so we find that \( a_R = \num{6,45e-7} m_s \) using the value for \( I_0 \) given in \cite{hollerman}
+
 
 According to what has been discussed in the previous section, there are some variables of the sail which have to be calculated. This are
 \[
