--- a/UphysicscNotes.bib
+++ b/UphysicscNotes.bib
@@ -22,3 +22,11 @@
 	year = "2003",
 	institution = "Lousiana University"
 }
+
+@book{presskit,
+	title = "Mars Science Laboratory Landing Press Kit",
+	year = "2012",
+	month = "July"
+}
+
+
