--- a/Uphysicsc.tex
+++ b/Uphysicsc.tex
@@ -9,6 +9,7 @@
 \usepackage{fancyhdr,lastpage}
 \renewcommand{\footrulewidth}{0.4pt}
 \usepackage[bf,sf]{titlesec}
+\usepackage[font={footnotesize,sf}]{caption}
 \usepackage{siunitx}
 \usepackage{titling,graphicx}
 \usepackage{abstract}
@@ -65,19 +66,10 @@ The release of the space craft will be considered at the time in which the Earth
 
 The main goals of the article are to discuss a suitable distribuiton of the mass of the space craft, as well as to simulate possible trajectories and the arrival of the sail to Mars.
 
-\subsection{Main assumptions}
-To model the motion of a solar sail, we assumed it to be subject solely to the gravitational attraction from the Sun and solar radiation pressure. This yields a meaningful first approximation which can be used to gain insight on 
+\subsection{General assumptions}
+When one considers the general model of a solar sail orbiting the Sun, one finds that the acceleration of the center of mass of the sail-Sun system is non-vanishing, and therefore, taking the center of mass as the origin of the reference frame, as we do in subsequent calculations, does not yield an inertial frame. However, this acceleration is negligible and so we use the approximation that the acceleration of the center of mass of the Sun-sail system ---which can in turn be approximated by the Sun's position--- is zero.
 
-Throughout the article, several assumptions have been made, both as interpretations of the problem and in order to facilitate the model. However, all assumptions are supported by literature, and all the approximations were found to be reasonable. We present the approximations and interpretations made.
-
-\begin{itemize}
-\item The orbits of Mars and the Earth are coplanar and perfectly circular.
-\item The only forces acting on the sail during its flight are the gravitational force exerted by the Sun and the thrust given by the inciding photons. Since the initial radial velocity is the Earth escape velocity, it is reasonable not to consider its attraction. However, Mars gravitational pull has been taken into account when calculating the arriving velocity.
-\item As stated in the problem given, we assume the total mass of the space craft is \SI{2 000}{kg} , including the payload and the sail. Thus, our goal is to maximize the payload while still finding a reasonable time of flight. 
-\item Comparing the research which has already been done to the fact that the preassure exerted by light is twice its energy density, one finds that the case given is one of a perfect reflection.
-\item We assume the only initial radial velocity of the sail is the Earth's linear velocity. Thus, one ignores the effects of the Earth's rotation.
-\end{itemize}
-
+Furthermore, for this model to be applicable, the orbits of the Earth and Mars must be assumed circular and coplanar, and the sail is assumed to remain perpendicular to the plane of the orbits.
 
 \section{The physics of solar sailing}
 We will follow \cite{tsu} and \cite{mcinnes} for most of this section.
@@ -143,7 +135,7 @@ As a consistency check, we note that if \( \alpha = 0 \), that is, the sail is o
 
 \section{First model}
 \subsection{Feasibility of the trip}
-To solve \autoref{eq:equations of motion general case} it is common to assume \( \dot{v}_r = 0\), as done in \cite{tsu} and \cite{mcinnes}. Then, the equations become those of a logarithmic spiral. Then, \( v_r = \dot{r} \) can be isolated and then integrated to find an expresssion for the time of travel between two circular and coplanar orbits of a given radius in terms of only the parameters \( \alpha \), \( a_R \) and \( a_G \):
+To solve \autoref{eq:equations of motion general case} it is common to assume \( \dot{v}_r = 0\), as done in \cite{tsu} and \cite{mcinnes}. With this assumption the equations become those of a logarithmic spiral. Then \( v_r = \dot{r} \) can be isolated and then integrated to find an expresssion for the time of travel between two circular and coplanar orbits of a given radius in terms of only the parameters \( \alpha \), \( a_R \) and \( a_G \):
 
 \begin{equation} \label{eq:time of flight between orbits}
 	t=\frac{1}{3}\cdot\frac{r_0^{3/2}-r^{3/2}}{r_0\sqrt{a_R}}\cdot\frac{(a_G/a_R-\cos^3\alpha)^{1/2}}{\sin\alpha\cos^2\alpha}
@@ -155,70 +147,40 @@ Given the data in the problem then \( a_G \) is completely determined and has a 
   a_R &= \dfrac{2I_0}{c} \dfrac{S}{m} \\
   		&= \dfrac{2I_0}{c} \dfrac{m_s}{\sigma m}
 \end{align*}
-where \( \sigma \) is the surface density of the sail, as given in the problem. And so we find that \( a_R = \num{6,45e-7} m_s \) using the value for \( I_0 \) given in \cite{hollerman}
+where \( \sigma \) is the surface density of the sail, as given in the problem. And so we find that \( a_R = \num{6,45e-7} m_s \) using the value for \( I_0 \) given in \cite{hollerman}.
 
+As for the sail angle \( \alpha \), by minimizing \autoref{eq:time of flight between orbits}, it can be seen that the optimum angle depends only on the ratio \( a_R / a_g \) which is commonly called the lightness parameter of the sail and denoted by \( \beta \) With the values obtained for the characteristic accelerations, the value for \( \beta \) is \( \num{e-4} m_s \). Nevertheless, for values of \( \beta \) up to 0.5, which is the range that is accessible in this situation given that \( m_s \) cannot exceed \SI{2000}{kg}, the optimum angle shows very litle variation from 35.26º, as can be seen in \autoref{fig:optimum angle}, which shows the value of the factor dependent on \( \alpha \) in \autoref{eq:time of flight between orbits}.
 
-According to what has been discussed in the previous section, there are some variables of the sail which have to be calculated. This are
-\[
-a_R=6,45\cdot 10^{-7} \cdot m_s
-\]
-\[a_G=5,928\cdot 10^{-3}
-\]
-where $m_s$ denotes the mass of the sail.
-Another parameter
-Literature suggests \cite{tsu} one can neglect the  $\dot{v}_r$ term in equation \ref{carlessexy} as a first approach. The simplified equation reads
-\begin{equation}
-- \dfrac{v_{\theta}^2}{r} = (a_R \cos^3{\alpha} - a_G) \left(\dfrac{r_0}{r}\right)^2
-\end{equation} 
-which can be directly solved.
+\begin{figure}[h] 
+	\centering
+	\includegraphics[scale=0.3]{angle.png}
+	\caption{Dependence of flight time on the sail angle $\alpha$}
+	\label{fig:optimum angle}
+\end{figure}
 
-Having solved both velocities, one finds the trajectory taken is a logarithmic spiral, which only depends on the ratio \(a_G/a_R\) and $\alpha$.
-Figure 1 shows a first approximation of the trajectory taken by the space craft with the mentioned suppositions and values.
+To test the feasibility of the voyage, we will compute the time of flight as a function of the mass of the sail from Earth's orbit to Mars' with the optimum sail angle. The results are shown in \autoref{fig:time of flight}
+
+Of course, there is no sail mass which produces an optimum time, since allotting more mass to the sail only affects \( a_R \), and not \( a_G \), which is mass-independent. 
+
+\begin{figure}[h] 
+	\centering
+	\includegraphics[scale=0.35]{time}
+	\caption{Decrease of the flight time as a function of thet  solar sail mass}
+	\label{fig:time of flight}
+\end{figure}
+
+With a total available mass of \SI{2000}{kg}, a manned mission propelled with a solar sail is obviously not possible. The purpose of a solar sail would then be to send unmanned cargo to Mars, possibly satellites or rovers to explore its surface. According to \cite{presskit}, the Mars Science Lab (MSL) mission, which sent the rover Curiosity to Mars, had a total mass of \SI{3893}{kg}. The rover itself, however had a mass of \SI{899}{kg}, and most of the remaining mass of the mission was destined to propulsion systems. Given that a hypothetical solar sail propelled mission would have no need for fuel tanks or propulsion systems, it seems reasonable that a payload mass of \SI{1000}{kg} would suffice to carry a rover or similar device to Mars. This would leave another \SI{1000}{kg} to be used for a sail of area \SI{142857}{m^2}. As such, the total time to travel to Mars in these conditions is of approximately 390 days. Again, comparing with a mission such as MSL, which took 254 days to reach Mars, we find that this time is higher, but the potentials savings in fuel and propulsion would possibly make up for it. Therefore we conclude that solar sailing is a viable means of sending small cargo to Mars. 
+
+\subsection{Intercepting Mars}
+
 
 \begin{figure}[h]
 	\centering
 	\includegraphics[scale=0.5]{espiral.png}
 	\label{espiral}
-	\caption{\small First approximation of the sail trajectory, in blue. The Sun is in the middle and the dashed lines represent the orbits of the Earth and Mars. Axis in AU.}
-	\label{fig: first}
-	
+	\caption{First approximation of the sail trajectory, in blue. The Sun is in the middle and the dashed lines represent the orbits of the Earth and Mars. Axis in AU.}
+	\label{fig:logarithmic spiral}
 \end{figure}
-
-
-Solving Equation 3.1 for $v_{\theta}$ and directly integrating, one can find the time of travel between radii $r_0$ and $r$.
-In order to optimize the flight time it is useful to define the solar sail lightness number which can be calculated as
-\begin{equation}
-	\beta=\frac{a_R}{a_G}
-\end{equation}
-Using the last two expressions one can find that minimising timeflight implies minimising function of $\alpha$
-\begin{equation}
-	\frac{(1-\beta\cos^3\alpha)^{1/2}}{\beta\cos^2\alpha\sin\alpha}
-\end{equation}
-Imposing the condition that its derivative must be equal to zero one obtains
-\begin{equation}
-	\beta-\frac{2}{\cos\alpha}\frac{1-2\tan^2\alpha}{2-\tan^2\alpha}=0
-\end{equation}
-\begin{figure}[h] \label{fig:arnauoficinista}
-	
-	\centering
-	\includegraphics[scale=0.3]{angle.png}
-	\caption{\small Different values for the function of $\alpha$}
-\end{figure}
-Computing for the optimal sail pitch angle one finds sligtly different values depending on $\beta$. Nevertheless, looking at \autoref{fig:arnauoficinista} one notices that for similar $\beta$ numbers the optimal angles are around $\alpha=0.62$ rad. Now, the only unknown variable in the time flight formula is the mass of the solar sail $m_s$.
-
-Obviously, the time flight will decrease as the mass of the solar sail becomes bigger as this implies a bigger surface and as a consequence a bigger thrust. This fact is shown in \autoref{fig:time}.
-\begin{figure}[h]
-	\centering
-	\includegraphics[scale=0.35]{time}
-	\caption{\small Decrease of the flight time as a function of thet  solar sail mass}
-	\label{fig:time}
-\end{figure}
-
-Firstly, it must be stated that with a maximum payload of $2000$kg one cannot safely send a manned space craft. Therefore, we will consider a mission consisting on sending just material.
-
-One must now decide on a formula which will have both a reasonable time of travel and a sufficient amount of payload so that the mission is profitable. Researching past missions to Mars, time travels of about one year are reasonable and, to have an idea, a rover like Curiosity weights about $900$kg. Of course, extra material is needed, but, according to research, $1000$kg of payload seems a reasonable choice. From equation 3.2 it is found that the flight time will be around 390 days, which, as stated, seems feasible.
-
-Choosing to distribute equally the mass of the sail and the mass of the sail, one gets a value for the solar sail lightness of $\beta=0.1088$. From now on, this value will be assumed to be equal to 0.1, since most of the other characteristics can be found in literature for such value.
 
 \section{No sé quin títol}
 \subsection{First simulation?}
