--- a/Uphysicsc.tex
+++ b/Uphysicsc.tex
@@ -219,12 +219,15 @@ Solutions of equations \ref{eq:equations of motion general case} and 2.14 have b
  
 The simulation in  \autoref{fig:simu} has been run under the assumption that the initial radial velocity of the sail is nule. This idea, supported by litterature and flight plans of previous missions, can be explained arguing the sole effect of the escape velocity the sail has is that of counteracting Earth's pull.
 
-\begin{figure*}
+\begin{figure}
 	\centering
-	\includegraphics[scale=0.7]{simulacionsvaries.png}
+	\includegraphics[scale=0.5]{simulacio1.png}
+	\includegraphics[scale=0.5]{simulacio2.png}
+	\includegraphics[scale=0.5]{simulacio3.png}
+	\includegraphics[scale=0.5]{simulacio4.png}
 	\caption{Simulation of sail trajectories for different sail angles, $\alpha$, in radians. T indicates the time of flight, in days. The green orbit is Earth's, and the red one is Mars'. The blue square indicates the intersection between Mars' orbit and the trajectory of the space craft, and the red square indicates the position of Mars at this exact time. }
 	\label{fig:espirals}
-\end{figure*}
+\end{figure}
 
 
 \bibliographystyle{ieeetr}
