--- a/Uphysicsc.tex
+++ b/Uphysicsc.tex
@@ -234,7 +234,7 @@ The simulation in  \autoref{fig:simu} has been run under the assumption that the
 
 In a first attempt of reaching Mars from the initial proposed configuration and without a need of manouvers, simulations have been run in order to find a proper sail angle and flight plan. \autoref{fig:espirals} shows some representative results of such simulations. As it has been mentioned before, gravitational pull from Mars has not been taken into account when running the simulations, since it is thought not to be strong enough to have considerable effects on the trajectory. However, in trajectories passing close enough to the planet, as such presented in \autoref{fig:espirals}, the attractive force of gavity will eventually be important enough to take into account, which will, on the one hand, enable the space craft to reach the target, but will also affect on its relative velocity to in. In an attempt of approximating this velocity, we first simulate the relative speed between both bodies at the time plotted.
 
-Assuming the trajectories of Mars and the space craft to be tangential in the first three plots in Figure 5, as they are in good aproximation, one gets relative speeds of
+Assuming the trajectories of Mars and the space craft to be tangential in the first three plots in Figure 5, as they are in good aproximation, one gets relative speeds of \SI{-8,5}{km\cdot s^{-1}}, \SI{-3.5}{km\cdot s^{-1}}  and \SI{-4.7}{km\cdot s^{-1}}.
 
 
 
